--- a/app-name/src/App.css
+++ b/app-name/src/App.css
@@ -42,9 +42,25 @@ background-color: yellowgreen;
 }
 ol{
   margin-left: 20vw;
-  margin-top: 20vh;
 }
 
+i{
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 0.5em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  text-align: center;
+  }
+
+  b{
+    display: block;
+    margin-block-end: 0.2em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    text-align: center;
+    }
+  
 li{
   font-family: Times New Roman,Times,serif;
 }
